# djangotenants

./: README.md  manage.py  pyproject.toml
djangotenants/: asgi.py  settings.py  urls.py  wsgi.py
