[tool.poetry]
name = "djangotenants"
version = "0.1.0"
description = "A playground to learn and understand multi tenant applications with Python Django"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
django-extensions = "^3.1.5"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
